# archrice

./: .bashrc  .gitignore  .tmux.conf  README.md  starship.toml
eww/: bar.scss  bar.yuck  baralt.yuck  barleft.scss  barright.scss  brightnesswindow.scss  brightnesswindow.yuck  brightnesswindowalt.yuck  desktop.scss  desktop.yuck  desktopalt.yuck  eww.scss  eww.yuck  mediawindow.scss  mediawindow.yuck  mediawindowalt.yuck  mocha.scss  powermenu.scss  powermenu.yuck  powermenualt.yuck  spotifywindow.scss  spotifywindow.yuck  spotifywindowalt.yuck  volumehover.scss  volumehover.yuck  volumehoveralt.yuck  volumewindow.scss  volumewindow.yuck  volumewindowalt.yuck
eww/scripts/: .chezmoiignore  .gitignore  CMakeLists.txt  Makefile  compile_commands.json  eww_toggle  eww_toggle.c  ewwstartup  ewwstartup.c  ewwtoggle  ewwtoggle.c  ewwtoggle.h  get_battery  get_battery.c  get_battery_icon  get_battery_icon.c  get_network  get_network.c  get_network_icon  get_network_icon.c  get_volume  get_volume.c  get_volume_icon  get_volume_icon.c  geticon  geticon.c  getnetwork  getnetwork.c  getstats  getstats.c  media-image  media-image.c  media_image  media_image.c  mediactl.bash  readCommand.h  spotify-check  spotify-check.c  spotify-image  spotify-image.bash  (+4 more)
eww/scripts/.cache/clangd/index/: eww_toggle.c.5C945E76B8F90A7C.idx  get_battery.c.94DE0AB5E9C62353.idx  get_battery_icon.c.D2A796A93CDA0AD2.idx  get_network.c.821DB1B20108F0F1.idx  get_network_icon.c.1B313CD04CA3725A.idx  get_volume.c.4E5D0E54DFBA17FF.idx  get_volume_icon.c.E02072AECCFEF86A.idx  getnetwork.c.396A37202C65BB0C.idx  media_image.c.21EFB43AF3056802.idx  volume_fetcher.c.2067D847EC1286FC.idx  volume_fetcher.h.2DBA81757627AE9D.idx
fish/: config.fish
hypr/: hyprland.conf
kitty/: current-theme.conf  kitty.conf
nvim/: init.lua  lazy-lock.json
nvim/lua/feline-config/: init.lua
nvim/lua/lazy-config/: init.lua
nvim/lua/lsp-config/: init.lua
nvim/lua/mappings/: init.lua
nvim/lua/vim-jukit/: init.lua
nvim/lua/xbase-config/: init.lua
rofi/: config.rasi
